--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
-    "vue": "^3.5.10"
+    "axios": "^1.7.7",
+    "pinia": "^2.2.4",
+    "vue": "^3.5.10",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
