--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview --host",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "typecheck": "vue-tsc --noEmit"
+    "typecheck": "vue-tsc --noEmit --project tsconfig.app.json"
   },
   "dependencies": {
     "axios": "^1.7.7",
