--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,11 @@
     "@eslint/js": "^9.12.0",
     "@stylistic/eslint-plugin": "^2.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.28.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "5.5.4",
     "typescript-eslint": "^8.8.1",
     "vite": "^5.4.8",
