--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,10 @@
     "typecheck": "vue-tsc --noEmit --project tsconfig.app.json"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
