--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "typecheck": "vue-tsc --noEmit --project tsconfig.app.json"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.1.5",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
