--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
+    "eslint-plugin-import": "^2.31.0",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
@@ -31,7 +32,7 @@
     "eslint-plugin-vue": "^9.28.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "typescript": "5.5.4",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1",
     "vite": "^6.0.1",
     "vue-tsc": "^2.1.6"
