--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
-    "eslint-plugin-import": "^2.31.0",
     "pinia": "^2.2.7",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
@@ -26,9 +25,14 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@stylistic/eslint-plugin": "^2.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.28.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
