--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,11 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@stylistic/eslint-plugin": "^2.9.0",
+    "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/eslint-config-typescript": "^14.1.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
     "eslint-import-resolver-alias": "^1.1.2",
