--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "axios": "^1.7.7",
+    "@vueuse/core": "^12.0.0",
+    "@vueuse/integrations": "^12.0.0",
+    "axios": "^1.7.9",
+    "focus-trap": "^7.6.2",
     "pinia": "^2.2.7",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
