--- a/auth-mockup/package.json
+++ b/auth-mockup/package.json
@@ -3,13 +3,22 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "typecheck": "tsc -noEmit"
+    "dev": "bun --hot index.ts",
+    "typecheck": "tsc -noEmit",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "typescript": "5.7.3"
+    "@eslint/js": "^9.19.0",
+    "@stylistic/eslint-plugin": "3.0.1",
+    "eslint": "9.19.0",
+    "eslint-import-resolver-typescript": "3.7.0",
+    "eslint-plugin-import": "2.31.0",
+    "typescript": "5.7.3",
+    "typescript-eslint": "^8.22.0"
   },
   "dependencies": {
-    "hono": "^4.6.3"
+    "hono": "4.6.20"
   }
 }
