--- a/client/package.json
+++ b/client/package.json
@@ -31,15 +31,15 @@
     "axios": "1.7.9",
     "eslint": "9.19.0",
     "eslint-import-resolver-typescript": "3.7.0",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-import-x": "4.6.1",
     "eslint-plugin-vue": "9.32.0",
     "focus-trap": "7.6.4",
     "normalize.css": "8.0.1",
     "pinia": "2.3.1",
-    "sass": "1.83.4",
+    "sass": "1.84.0",
     "splitpanes": "3.1.8",
     "typescript": "5.7.3",
-    "vite": "6.0.11",
+    "vite": "6.1.0",
     "vue": "3.5.13",
     "vue-router": "4.5.0",
     "vue-tsc": "2.2.0"
