--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,5 @@
 {
   "name": "api",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "dependencies": {
-    "hono": "^4.6.4"
-  }
+  "version": "0.0.1",
+  "type": "module"
 }
