--- a/auth-mockup/.env.example
+++ b/auth-mockup/.env.example
@@ -1,4 +1,4 @@
-ALLOWED_ORIGIN=http://localhost:8080
+ALLOWED_ORIGIN=http://192.168.7.204:8080
 PORT=3000
 COOKIE_NAME=token
 COOKIE_LIFETIME_SEC=86400
