--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,21 @@
 {
   "name": "api",
   "version": "0.0.1",
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "dev": "bun src --hot",
+    "typecheck": "tsc",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
+  },
+  "devDependencies": {
+    "@eslint/js": "9.20.0",
+    "@stylistic/eslint-plugin": "^3.1.0",
+    "@types/bun": "^1.2.2",
+    "eslint": "9.20.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import-x": "^4.6.1",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.24.0"
+  }
 }
