--- a/api/package.json
+++ b/api/package.json
@@ -4,17 +4,18 @@
   "type": "module",
   "scripts": {
     "dev": "bun src --hot",
-    "typecheck": "tsc",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
+  "dependencies": {},
   "devDependencies": {
     "@eslint/js": "9.20.0",
-    "@stylistic/eslint-plugin": "^3.1.0",
-    "@types/bun": "^1.2.2",
+    "@stylistic/eslint-plugin": "3.1.0",
+    "@tsconfig/bun": "1.0.7",
+    "@types/bun": "1.2.2",
     "eslint": "9.20.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-import-resolver-typescript": "3.7.0",
+    "eslint-plugin-import-x": "4.6.1",
     "typescript": "5.7.3",
     "typescript-eslint": "8.24.0"
   }
