--- a/auth-mockup/package.json
+++ b/auth-mockup/package.json
@@ -9,14 +9,14 @@
     "lint:fix": "eslint --fix"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "3.1.0",
+    "@tsconfig/bun": "1.0.7",
     "@types/bun": "latest",
-    "@eslint/js": "^9.19.0",
-    "@stylistic/eslint-plugin": "3.0.1",
-    "eslint": "9.19.0",
+    "eslint": "9.20.1",
     "eslint-import-resolver-typescript": "3.7.0",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-import-x": "4.6.1",
     "typescript": "5.7.3",
-    "typescript-eslint": "^8.22.0"
+    "typescript-eslint": "8.24.0"
   },
   "dependencies": {
     "hono": "4.6.20"
