--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "build": "vite build",
     "typecheck": "vue-tsc",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "docker:build": "vite build && docker build --pull -t client .",
+    "docker:run": "docker run -d -p 8080:8080 --name client client"
   },
   "devDependencies": {
     "@floating-ui/vue": "1.1.6",
