Before more Docker research

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,7 +3,7 @@ COPY dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
 
 # to build
-# docker build --pull -t client .
+# docker build --pull -t lipa-client .
 
 # to run
-# docker run -d -p 8080:8080 --name client client
+# docker run -d -p 80:80 --name lipa-client lipa-client
