--- a/auth-mockup/Dockerfile
+++ b/auth-mockup/Dockerfile
@@ -1,10 +1,6 @@
-FROM oven/bun AS base
+FROM oven/bun
 WORKDIR /usr/src/app
 
-COPY package.json .
-COPY bun.lock .
 COPY . .
 
 RUN bun install --production
-EXPOSE 3000/tcp
-ENTRYPOINT [ "bun", "run", "src" ]
