--- a/compose.yaml
+++ b/compose.yaml
@@ -12,7 +12,7 @@ services:
       - 3306:3306
 
   auth:
-    build: auth-mockup/
+    build: auth-mockup
     environment:
       ALLOWED_ORIGIN: http://${SERVER}:8080 http://${SERVER}
       PORT: ${AUTH_PORT}
@@ -26,9 +26,11 @@ services:
       - db
 
   client:
-    build: client/
-    environment:
-      VITE_AUTH_API: http://${SERVER}:${AUTH_PORT}
+    build:
+      context: client
+      dockerfile: Dockerfile
+      args:
+        - VITE_AUTH_API=http://${SERVER}:${AUTH_PORT}
     ports:
       - 80:80
     depends_on:
