--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
+COMPOSE_BAKE=true
+
 SERVER=192.168.7.204
+
 AUTH_PORT=3000
-
-DB_USER=lipa_user
-DB_PASSWORD=12345
-DB_ROOT_PASSWORD=12345678
-DB_NAME=lipa
-DB_STORAGE=~/lipa-db
-
 COOKIE_SECRET=INSERT_COOKIE_SECRET
 TOKEN_SECRET=INSERT_TOKEN_SECRET
+
+DB_USER=INSERT_DB_USER
+DB_PASSWORD=INSERT_DB_PASSWORD
+DB_ROOT_PASSWORD=INSERT_DB_ROOT_PASSWORD
+DB_NAME=lipa
+DB_STORAGE=~/lipa-db
