--- a/compose.yaml
+++ b/compose.yaml
@@ -23,7 +23,8 @@ services:
     ports: 
       - ${AUTH_PORT}:${AUTH_PORT}
     depends_on:
-      - db
+      db:
+        condition: service_started
 
   client:
     build:
