More docker research

--- a/auth-mockup/Dockerfile
+++ b/auth-mockup/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-RUN bun install --production
+RUN bun install --production --frozen-lockfile
 ENTRYPOINT ["bun", "run", "src"]
