--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,5 @@ TOKEN_SECRET=INSERT_TOKEN_SECRET
 DB_USER=INSERT_DB_USER
 DB_PASSWORD=INSERT_DB_PASSWORD
 DB_ROOT_PASSWORD=INSERT_DB_ROOT_PASSWORD
-DB_NAME=lipa
+DB_NAME=INSERT_DB_NAME
 DB_STORAGE=~/lipa-db
