--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,24 @@
     "#*": "./src/*"
   },
   "scripts": {
-    "dev": "vite --host",
-    "preview": "vite preview --host",
     "build": "vite build",
-    "typecheck": "vue-tsc",
+    "dev": "NODE_ENV=development vite --host",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "typecheck": "vue-tsc"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "3.1.0",
+    "@types/splitpanes": "2.2.6",
+    "@vue/eslint-config-typescript": "14.4.0",
+    "eslint": "9.20.1",
+    "eslint-import-resolver-typescript": "3.7.0",
+    "eslint-plugin-import-x": "4.6.1",
+    "eslint-plugin-vue": "9.32.0",
+    "typescript": "5.7.3",
+    "vue-tsc": "2.2.0"
+  },
+  "dependencies": {
     "@floating-ui/vue": "1.1.6",
     "@fontsource-variable/exo-2": "5.1.1",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
@@ -21,27 +31,18 @@
     "@fortawesome/free-regular-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/vue-fontawesome": "3.0.8",
-    "@stylistic/eslint-plugin": "3.1.0",
-    "@types/splitpanes": "2.2.6",
     "@vitejs/plugin-vue": "5.2.1",
-    "@vue/eslint-config-typescript": "14.4.0",
     "@vue/tsconfig": "0.7.0",
     "@vueuse/core": "12.5.0",
     "@vueuse/integrations": "12.5.0",
     "axios": "1.7.9",
-    "eslint": "9.20.1",
-    "eslint-import-resolver-typescript": "3.7.0",
-    "eslint-plugin-import-x": "4.6.1",
-    "eslint-plugin-vue": "9.32.0",
     "focus-trap": "7.6.4",
     "normalize.css": "8.0.1",
     "pinia": "3.0.0",
     "sass": "1.84.0",
     "splitpanes": "3.1.8",
-    "typescript": "5.7.3",
-    "vite": "6.1.0",
+    "vite": "6.0.0",
     "vue": "3.5.13",
-    "vue-router": "4.5.0",
-    "vue-tsc": "2.2.0"
+    "vue-router": "4.5.0"
   }
 }
