Minor config changes

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,15 @@ COMPOSE_BAKE=true
 
 SERVER=192.168.7.204
 
-AUTH_PORT=3000
+API_PORT=3000
+COOKIE_NAME=INSERT_COOKIE_NAME
 COOKIE_SECRET=INSERT_COOKIE_SECRET
+COOKIE_LIFETIME_SEC=86400
 TOKEN_SECRET=INSERT_TOKEN_SECRET
 
 DB_USER=INSERT_DB_USER
 DB_PASSWORD=INSERT_DB_PASSWORD
 DB_ROOT_PASSWORD=INSERT_DB_ROOT_PASSWORD
 DB_NAME=INSERT_DB_NAME
-DB_STORAGE=~/lipa-db
+DB_PORT=3306
+DB_STORAGE=/var/opt/INSERT_DB_STORAGE
