--- a/auth-mockup/package.json
+++ b/auth-mockup/package.json
@@ -2,7 +2,7 @@
   "name": "auth",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot src",
+    "dev": "NODE_ENV=development bun --hot src",
     "typecheck": "tsc -noEmit",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
