--- a/compose.yaml
+++ b/compose.yaml
@@ -9,19 +9,19 @@ services:
     volumes:
       - ${DB_STORAGE}:/var/lib/mysql
     ports:
-      - 3306:3306
+      - ${DB_PORT}:${DB_PORT}
 
   auth:
     build: auth-mockup
     environment:
       ALLOWED_ORIGIN: http://${SERVER}:8080 http://${SERVER}
-      PORT: ${AUTH_PORT}
-      COOKIE_NAME: token
-      COOKIE_LIFETIME_SEC: 86400
+      PORT: ${API_PORT}
+      COOKIE_NAME: ${COOKIE_NAME}
+      COOKIE_LIFETIME_SEC: ${COOKIE_LIFETIME_SEC}
       COOKIE_SECRET: ${COOKIE_SECRET}
       TOKEN_SECRET: ${TOKEN_SECRET}
     ports: 
-      - ${AUTH_PORT}:${AUTH_PORT}
+      - ${API_PORT}:${API_PORT}
     depends_on:
       db:
         condition: service_started
@@ -31,7 +31,7 @@ services:
       context: client
       dockerfile: Dockerfile
       args:
-        - VITE_AUTH_API=http://${SERVER}:${AUTH_PORT}
+        - VITE_AUTH_API=http://${SERVER}:${API_PORT}
     ports:
       - 80:80
     depends_on:
