--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
     build: auth-mockup
     environment:
       ALLOWED_ORIGIN: http://${SERVER}:8080 http://${SERVER}
-      PORT: ${API_PORT}
+      API_PORT: ${API_PORT}
       COOKIE_NAME: ${COOKIE_NAME}
       COOKIE_LIFETIME_SEC: ${COOKIE_LIFETIME_SEC}
       COOKIE_SECRET: ${COOKIE_SECRET}
