--- a/compose.yaml
+++ b/compose.yaml
@@ -11,8 +11,8 @@ services:
     ports:
       - ${DB_PORT}:${DB_PORT}
 
-  auth:
-    build: auth-mockup
+  api:
+    build: api
     environment:
       ALLOWED_ORIGIN: http://${SERVER}:8080 http://${SERVER}
       API_PORT: ${API_PORT}
@@ -31,8 +31,8 @@ services:
       context: client
       dockerfile: Dockerfile
       args:
-        - VITE_AUTH_API=http://${SERVER}:${API_PORT}
+        - VITE_API_URI=http://${SERVER}:${API_PORT}
     ports:
       - 80:80
     depends_on:
-      - auth
+      - api
