--- a/compose.yaml
+++ b/compose.yaml
@@ -11,10 +11,21 @@ services:
     ports:
       - ${DB_PORT}:${DB_PORT}
 
+  phpmyadmin:
+    depends_on:
+      - db
+    image: phpmyadmin
+    restart: always
+    ports:
+      - ${PHPMYADMIN_PORT}:${PRODUCTION_PORT}
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+
   api:
     build: api
     environment:
-      ALLOWED_ORIGIN: http://${SERVER}:8080 http://${SERVER}
+      ALLOWED_ORIGIN: http://${SERVER}:${DEVELOPMENT_PORT} http://${SERVER}
       API_PORT: ${API_PORT}
       COOKIE_NAME: ${COOKIE_NAME}
       COOKIE_LIFETIME_SEC: ${COOKIE_LIFETIME_SEC}
@@ -33,6 +44,6 @@ services:
       args:
         - VITE_API_URI=http://${SERVER}:${API_PORT}
     ports:
-      - 80:80
+      - ${PRODUCTION_PORT}:${PRODUCTION_PORT}
     depends_on:
       - api
