--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ COMPOSE_BAKE=true
 SERVER=192.168.7.204
 
 API_PORT=3000
+PHPMYADMIN_PORT=8888
+DEVELOPMENT_PORT=8080
+PRODUCTION_PORT=80
+
 COOKIE_NAME=INSERT_COOKIE_NAME
 COOKIE_SECRET=INSERT_COOKIE_SECRET
 COOKIE_LIFETIME_SEC=86400
