--- a/api/.env.development
+++ b/api/.env.development
@@ -1,5 +1,6 @@
 API_PORT=3000
-ALLOWED_ORIGIN: http://192.168.7.204:8080 http://192.168.7.204
+_ALLOWED_ORIGIN: http://192.168.7.204:8080 http://192.168.7.204
+ALLOWED_ORIGIN: http://127.0.0.1:8080 http://127.0.0.1
 COOKIE_NAME=INSERT_COOKIE_NAME
 COOKIE_SECRET=INSERT_COOKIE_SECRET
 COOKIE_LIFETIME_SEC=86400
