--- a/api/.env.development
+++ b/api/.env.development
@@ -1,7 +1,14 @@
 API_PORT=3000
-_ALLOWED_ORIGIN: http://192.168.7.204:8080 http://192.168.7.204
-ALLOWED_ORIGIN: http://127.0.0.1:8080 http://127.0.0.1
+ALLOWED_ORIGIN: http://192.168.7.204:8080 http://192.168.7.204
+_ALLOWED_ORIGIN: http://127.0.0.1:8080 http://127.0.0.1
 COOKIE_NAME=INSERT_COOKIE_NAME
 COOKIE_SECRET=INSERT_COOKIE_SECRET
 COOKIE_LIFETIME_SEC=86400
 TOKEN_SECRET=INSERT_TOKEN_SECRET
+
+DB_USER=INSERT_DB_USER
+DB_PASSWORD=INSERT_DB_PASSWORD
+DB_ROOT_PASSWORD=INSERT_DB_ROOT_PASSWORD
+DB_NAME=INSERT_DB_NAME
+DB_PORT=3306
+DB_STORAGE=/var/opt/INSERT_DB_STORAGE
