--- a/compose.yaml
+++ b/compose.yaml
@@ -31,6 +31,10 @@ services:
       COOKIE_LIFETIME_SEC: ${COOKIE_LIFETIME_SEC}
       COOKIE_SECRET: ${COOKIE_SECRET}
       TOKEN_SECRET: ${TOKEN_SECRET}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      DB_PORT: ${DB_PORT}
     ports: 
       - ${API_PORT}:${API_PORT}
     depends_on:
