Development db host

--- a/api/.env.development
+++ b/api/.env.development
@@ -11,4 +11,5 @@ DB_PASSWORD=INSERT_DB_PASSWORD
 DB_ROOT_PASSWORD=INSERT_DB_ROOT_PASSWORD
 DB_NAME=INSERT_DB_NAME
 DB_PORT=3306
+DB_HOST=localhost
 DB_STORAGE=/var/opt/INSERT_DB_STORAGE
