--- a/compose.yaml
+++ b/compose.yaml
@@ -35,6 +35,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       DB_PORT: ${DB_PORT}
+      DB_HOST: db
     ports: 
       - ${API_PORT}:${API_PORT}
     depends_on:
