--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,14 @@
     "typecheck": "vue-tsc"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "4.2.0",
+    "@stylistic/eslint-plugin": "4.4.0",
     "@vue/eslint-config-typescript": "14.5.0",
-    "eslint": "9.23.0",
-    "eslint-import-resolver-typescript": "4.3.1",
-    "eslint-plugin-import-x": "4.10.0",
-    "eslint-plugin-vue": "10.0.0",
-    "typescript": "5.8.2",
-    "vue-tsc": "2.2.8"
+    "eslint": "9.27.0",
+    "eslint-import-resolver-typescript": "4.4.1",
+    "eslint-plugin-import-x": "4.13.3",
+    "eslint-plugin-vue": "10.1.0",
+    "typescript": "5.8.3",
+    "vue-tsc": "3.0.0-alpha.8"
   },
   "dependencies": {
     "@floating-ui/vue": "1.1.6",
@@ -30,16 +30,16 @@
     "@fortawesome/free-regular-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/vue-fontawesome": "3.0.8",
-    "@vitejs/plugin-vue": "5.2.3",
+    "@vitejs/plugin-vue": "5.2.4",
     "@vue/tsconfig": "0.7.0",
-    "@vueuse/core": "13.0.0",
-    "@vueuse/integrations": "13.0.0",
-    "axios": "1.8.4",
+    "@vueuse/core": "13.2.0",
+    "@vueuse/integrations": "13.2.0",
+    "axios": "1.9.0",
     "focus-trap": "7.6.4",
-    "pinia": "3.0.1",
-    "sass": "1.86.2",
-    "vite": "6.2.5",
-    "vue": "3.5.13",
-    "vue-router": "4.5.0"
+    "pinia": "3.0.2",
+    "sass": "1.89.0",
+    "vite": "6.3.5",
+    "vue": "3.5.15",
+    "vue-router": "4.5.1"
   }
 }
