--- a/compose.yaml
+++ b/compose.yaml
@@ -28,7 +28,8 @@ services:
       ALLOWED_ORIGIN: http://${SERVER}:${DEVELOPMENT_PORT} http://${SERVER}
       API_PORT: ${API_PORT}
       COOKIE_NAME: ${COOKIE_NAME}
-      COOKIE_LIFETIME_SEC: ${COOKIE_LIFETIME_SEC}
+      COOKIE_SHORT_LIFETIME_SEC: ${COOKIE_SHORT_LIFETIME_SEC}
+      COOKIE_LONG_LIFETIME_SEC: ${COOKIE_LONG_LIFETIME_SEC}
       COOKIE_SECRET: ${COOKIE_SECRET}
       TOKEN_SECRET: ${TOKEN_SECRET}
       DB_USER: ${DB_USER}
