--- a/client/package.json
+++ b/client/package.json
@@ -13,33 +13,33 @@
     "typecheck": "vue-tsc"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "4.4.0",
-    "@vue/eslint-config-typescript": "14.5.0",
-    "eslint": "9.28.0",
-    "eslint-import-resolver-typescript": "4.4.3",
-    "eslint-plugin-import-x": "4.15.1",
+    "@stylistic/eslint-plugin": "5.1.0",
+    "@vue/eslint-config-typescript": "14.5.1",
+    "eslint": "9.30.1",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import-x": "4.16.1",
     "eslint-plugin-vue": "10.2.0",
     "typescript": "5.8.3",
-    "vue-tsc": "3.0.0-alpha.8"
+    "vue-tsc": "3.0.0"
   },
   "dependencies": {
-    "@floating-ui/vue": "1.1.6",
+    "@floating-ui/vue": "1.1.7",
     "@fontsource-variable/exo-2": "5.2.6",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
     "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/free-regular-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/vue-fontawesome": "3.0.8",
-    "@vitejs/plugin-vue": "5.2.4",
+    "@vitejs/plugin-vue": "6.0.0",
     "@vue/tsconfig": "0.7.0",
-    "@vueuse/core": "13.3.0",
-    "@vueuse/integrations": "13.3.0",
-    "axios": "1.9.0",
+    "@vueuse/core": "13.4.0",
+    "@vueuse/integrations": "13.4.0",
+    "axios": "1.10.0",
     "focus-trap": "7.6.5",
     "pinia": "3.0.3",
-    "sass": "1.89.1",
-    "vite": "6.3.5",
-    "vue": "3.5.16",
+    "sass": "1.89.2",
+    "vite": "7.0.0",
+    "vue": "3.5.17",
     "vue-router": "4.5.1"
   }
 }
