--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-regular-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/vue-fontawesome": "3.0.8",
+    "@types/node": "^24.0.10",
     "@vitejs/plugin-vue": "6.0.0",
     "@vue/tsconfig": "0.7.0",
     "@vueuse/core": "13.4.0",
