--- a/client/package.json
+++ b/client/package.json
@@ -14,32 +14,33 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "5.2.2",
+    "@types/node": "24.2.0",
     "@vue/eslint-config-typescript": "14.6.0",
+    "@vue/tsconfig": "0.7.0",
     "eslint": "9.32.0",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import-x": "4.16.1",
-    "eslint-plugin-vue": "10.3.0",
-    "typescript": "5.8.3",
-    "vue-tsc": "3.0.4"
+    "eslint-plugin-vue": "10.4.0",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.39.0",
+    "vue-tsc": "3.0.5"
   },
   "dependencies": {
-    "@floating-ui/vue": "1.1.7",
+    "@floating-ui/vue": "1.1.8",
     "@fontsource-variable/exo-2": "5.2.6",
     "@fortawesome/fontawesome-svg-core": "7.0.0",
     "@fortawesome/free-brands-svg-icons": "7.0.0",
     "@fortawesome/free-regular-svg-icons": "7.0.0",
     "@fortawesome/free-solid-svg-icons": "7.0.0",
     "@fortawesome/vue-fontawesome": "3.1.1",
-    "@types/node": "24.1.0",
     "@vitejs/plugin-vue": "6.0.1",
-    "@vue/tsconfig": "0.7.0",
     "@vueuse/core": "13.6.0",
     "@vueuse/integrations": "13.6.0",
     "axios": "1.11.0",
     "focus-trap": "7.6.5",
     "pinia": "3.0.3",
-    "sass": "1.89.2",
-    "vite": "7.0.6",
+    "sass": "1.90.0",
+    "vite": "7.1.0",
     "vue": "3.5.18",
     "vue-router": "4.5.1"
   }
