--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "typescript-eslint": "8.39.0"
   },
   "dependencies": {
+    "exceljs": "4.4.0",
     "hono": "4.8.12",
     "mysql2": "3.14.3"
   }
