--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@vueuse/core": "14.0.0",
     "@vueuse/integrations": "14.0.0",
     "axios": "1.12.2",
+    "exceljs": "4.4.0",
     "focus-trap": "7.6.5",
     "pinia": "3.0.3",
     "sass": "1.93.2",
