--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "exceljs": "4.4.0",
     "hono": "4.10.6",
     "hyperformula": "^3.1.0",
-    "mysql2": "3.15.3"
+    "mysql2": "3.15.3",
+    "numfmt": "^3.2.3"
   }
 }
