--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "axios": "1.13.2",
     "exceljs": "4.4.0",
     "focus-trap": "7.6.6",
+    "numfmt": "^3.2.3",
     "pinia": "3.0.4",
     "sass": "1.94.2",
     "vite": "7.2.4",
