--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,10 @@
     "eslint": "9.39.1",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import-x": "4.16.1",
-    "eslint-plugin-vue": "10.5.1",
+    "eslint-plugin-vue": "10.6.2",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.48.0",
-    "vue-tsc": "3.1.5"
+    "typescript-eslint": "8.48.1",
+    "vue-tsc": "3.1.7"
   },
   "dependencies": {
     "@floating-ui/vue": "1.1.9",
@@ -39,10 +39,10 @@
     "axios": "1.13.2",
     "exceljs": "4.4.0",
     "focus-trap": "7.6.6",
-    "numfmt": "^3.2.3",
+    "numfmt": "3.2.3",
     "pinia": "3.0.4",
     "sass": "1.94.2",
-    "vite": "7.2.4",
+    "vite": "7.2.7",
     "vue": "3.5.25",
     "vue-router": "4.6.3"
   }
